--- a/IPC2_FASE1.csproj
+++ b/IPC2_FASE1.csproj
@@ -128,6 +128,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CargarController.cs" />
+    <Compile Include="Controllers\fileUploadController.cs" />
     <Compile Include="Controllers\TorneoController.cs" />
     <Compile Include="Controllers\TableroController.cs" />
     <Compile Include="Controllers\JuegoController.cs" />
@@ -137,6 +139,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Ficha.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entity\Usuario.cs" />
   </ItemGroup>
@@ -183,10 +186,11 @@
     <Content Include="Views\Tablero\Tablero.cshtml" />
     <Content Include="Views\Torneo\Torneo.cshtml" />
     <Content Include="Views\Usuarios\Deshabilitar.cshtml" />
+    <Content Include="Views\Cargar\Cargar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\fileUpload\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
